todo-app/03-allow-frontend-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-http-ingress
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: todo
      app.kubernetes.io/name: todolist
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
