todo-app/05-allow-frontend-egress-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-egress-to-backend
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: todo
      app.kubernetes.io/name: todolist
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: backend
          app.kubernetes.io/instance: todo
          app.kubernetes.io/name: todolist
    ports:
    - protocol: TCP
      port: 8000
