todo-app/06-allow-backend-postgres-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-postgres-egress
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: todo
      app.kubernetes.io/name: todolist
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgress
    ports:
    - protocol: TCP
      port: 5432
